<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddProjectActivity"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/baseline_arrow_back_24"
            android:id="@+id/backBtn"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_project"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="10dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextProjectName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="8dp"
        android:layout_marginTop="30dp"
        android:hint="@string/project_name"/>

    <EditText
        android:id="@+id/editTextProjectDescription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:gravity="top|left"
        android:hint="@string/description"
        android:padding="8dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_planted"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startDate_picker"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text=""
            app:icon="@drawable/baseline_calendar_today_24"
            app:iconGravity="start"
            android:paddingStart="14dp"/>

        <TextView
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/startDate"
            android:text="dd/mm/YYYY"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_arrow_right_alt_24"
            android:paddingHorizontal="5dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/endDate_picker"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text=""
            app:icon="@drawable/baseline_calendar_today_24"
            app:iconGravity="start"
            android:paddingStart="14dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/endDate"
            android:text="dd/mm/YYYY"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCreateProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create"
        android:drawableRight="@drawable/baseline_arrow_24"
        />

</LinearLayout>